adapted the code according to module definitions for rental module in carhire
